# orbital-ai-labs

./: .gitignore  pyproject.toml
Lab-1/ooais-project/reports/: lab01_report.txt
Lab-1/ooais-project/src/ingestion/: load_data.py
Lab-2/data/clean/: orbital_observations.csv
Lab-2/data/processed/: model_input.csv
Lab-2/data/raw/: metadata.json  orbital_observations.csv
Lab-2/reports/: report.txt
Lab-3/src/ingestion/: ingest_data.py
Lab-4/reports/: repo_link.txt
Lab-4/src/preprocessing/: prepare_ml_input.py
Lab-5/reports/: training_report.txt
Lab-5/results/: evaluation_results.txt  model_trained.joblib
Lab-5/src/models/: train_model.py
Lab-6/reports/: model_playground_summary.txt
Lab-6/src/models/: model_playground.py
Lab-7/models/: image_classifier.joblib
Lab-7/reports/: report.txt
Lab-7/src/: paths.py
Lab-7/src/data/: create_noisy_image.py  download_eurosat.py  prepare_image_dataset.py
Lab-7/src/vision/: feature_extractor.py  predict_image.py  train_image_model.py
reports/: ingestion_summary.txt
